--- a/trading.ipynb
+++ b/trading.ipynb
@@ -2,11 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 37,
-=======
-   "execution_count": 1,
->>>>>>> 090e82f (add firts class)
+   "execution_count": null,
    "id": "40f2ca0f",
    "metadata": {},
    "outputs": [],
@@ -20,11 +16,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 38,
-=======
-   "execution_count": 2,
->>>>>>> 090e82f (add firts class)
+   "execution_count": null,
    "id": "11ad56f1",
    "metadata": {},
    "outputs": [],
@@ -60,11 +52,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 39,
-=======
-   "execution_count": 3,
->>>>>>> 090e82f (add firts class)
+   "execution_count": null,
    "id": "b5b6b6e7",
    "metadata": {},
    "outputs": [],
@@ -85,11 +73,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 40,
-=======
-   "execution_count": 4,
->>>>>>> 090e82f (add firts class)
+   "execution_count": null,
    "id": "62084f7c",
    "metadata": {},
    "outputs": [],
@@ -117,11 +101,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 41,
-=======
-   "execution_count": 5,
->>>>>>> 090e82f (add firts class)
+   "execution_count": null,
    "id": "682e5346",
    "metadata": {},
    "outputs": [],
@@ -182,11 +162,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 42,
-=======
-   "execution_count": 6,
->>>>>>> 090e82f (add firts class)
+   "execution_count": null,
    "id": "4fc47ef8",
    "metadata": {},
    "outputs": [],
@@ -208,11 +184,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 43,
-=======
-   "execution_count": 7,
->>>>>>> 090e82f (add firts class)
+   "execution_count": null,
    "id": "a7150ce4",
    "metadata": {},
    "outputs": [],
@@ -241,11 +213,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 44,
-=======
-   "execution_count": 8,
->>>>>>> 090e82f (add firts class)
+   "execution_count": null,
    "id": "629bf708",
    "metadata": {},
    "outputs": [],
@@ -269,22 +237,10 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 45,
-=======
-   "execution_count": 9,
->>>>>>> 090e82f (add firts class)
+   "execution_count": null,
    "id": "687fc2de",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Columna R añadida\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def max_drawdown_in_R(data:pd.DataFrame):\n",
     "    if \"R\" not in data.columns: \n",
@@ -311,11 +267,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 46,
-=======
-   "execution_count": 10,
->>>>>>> 090e82f (add firts class)
+   "execution_count": null,
    "id": "733fb19d",
    "metadata": {},
    "outputs": [],
@@ -329,11 +281,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 47,
-=======
-   "execution_count": 11,
->>>>>>> 090e82f (add firts class)
+   "execution_count": null,
    "id": "4624076c",
    "metadata": {},
    "outputs": [],
@@ -356,23 +304,12 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 48,
-=======
    "execution_count": null,
->>>>>>> 090e82f (add firts class)
    "id": "f225fd75",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from logic import BotAnalyzer \n",
-    "\n",
-<<<<<<< HEAD
-    "\n",
-    "#hola"
-=======
-    "\n"
->>>>>>> 090e82f (add firts class)
+    "from logic import BotAnalyzer "
    ]
   }
  ],
