--- a/trading.ipynb
+++ b/trading.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 262,
    "id": "40f2ca0f",
    "metadata": {},
    "outputs": [],
@@ -16,20 +16,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 263,
    "id": "11ad56f1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df = pd.read_excel(r\"Files/TTP_bots.xlsx\",sheet_name=\"All\")\n",
     "df = pd.read_excel(r\"Files/the5ers_bots.xlsx\",sheet_name=\"All\")\n",
+    "df = pd.read_excel(r\"Files/TTP_bots.xlsx\",sheet_name=\"All\")\n",
     "\n",
     "#Rellenando na con ceros \n",
     "df.fillna(0,inplace=True)\n",
     "\n",
     "\n",
     "#Colocando comment en operaciones manuales\n",
-    "df.loc[df[\"Comment\"]==0,\"Comment\"] = \"Manual\"\n",
+    "df.loc[df[\"Comment\"]==np.nan,\"Comment\"] = \"Manual\"\n",
     "\n",
     "#Resetando indice\n",
     "df.reset_index(inplace=True,drop=True)\n",
@@ -39,7 +39,7 @@
     "df.rename(columns={\"Time\":\"Time Entry\",\"Time.1\":\"Time Exit\"},inplace=True)\n",
     "\n",
     "#Nueva columna con el balance \n",
-    "df[\"Balance\"] = INITIAL_BALANCE + (df[\"Profit\"]+df[\"Commission\"]+df[\"Swap\"]).cumsum() "
+    "df[\"Balance\"] = INITIAL_BALANCE + (df[\"Profit\"]+df[\"Commission\"]+df[\"Swap\"]).cumsum() \n"
    ]
   },
   {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 264,
    "id": "b5b6b6e7",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 265,
    "id": "62084f7c",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 266,
    "id": "682e5346",
    "metadata": {},
    "outputs": [],
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 267,
    "id": "4fc47ef8",
    "metadata": {},
    "outputs": [],
@@ -184,14 +184,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 268,
    "id": "a7150ce4",
    "metadata": {},
    "outputs": [],
    "source": [
     "def add_R(data_R:pd.DataFrame):\n",
-    "    if \"R\" in data_R.columns:\n",
+    "    if \"R-multiple\" in data_R.columns:\n",
     "        return None\n",
+    "    \n",
+    "    #Se sacan  las operaciones sin stops iniciales\n",
+    "    data_R.drop(data_R[data_R[\"S / L\"] ==0].index,inplace=True)\n",
+    "    data_R.reset_index(drop=True,inplace=True)\n",
+    "\n",
     "    \n",
     "    for i in point_value(data_R):\n",
     "        \n",
@@ -203,41 +208,40 @@
     "        \n",
     "        data_R.loc[data_R[\"Symbol\"]==i,\"R(usd)\"] = func.round(2)\n",
     "    \n",
-    "    data_R[\"R\"] = (data_R[\"Profit\"]/data_R[\"R(usd)\"]).round(2)\n",
+    "    data_R[\"R-multiple\"] = (data_R[\"Profit\"]/data_R[\"R(usd)\"]).round(2)\n",
     "\n",
-    "    #Se rellenan con inf las operaciones sin stops iniciales\n",
-    "    data_R.fillna(np.nan,inplace=True)\n",
     "        \n",
     "    return data_R "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 269,
    "id": "629bf708",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def balance_in_R(data:pd.DataFrame,RISK:float = 0.01,grafic:bool = False):\n",
+    "def balance_in_R(data:pd.DataFrame,RISK:float = 0.01):\n",
     "    \n",
     "    # * Formula: Balance_n = Balance_0 * PRODUCTORIO(1 + R_n* RISK) \n",
+    "    \n",
+    "    #Limpio \"R(usd)\" que no me interesa\n",
+    "    if \"R(usd)\" in data.columns:\n",
+    "        data = data.drop(columns=\"R(usd)\")\n",
     "\n",
     "    #Interior del Productorio\n",
-    "    data[\"growth\"] = 1+ data[\"R\"]*RISK\n",
+    "    data[\"growth\"] = 1+ data[\"R-multiple\"]*RISK\n",
     "    \n",
     "    #Toda la Formula\n",
-    "    data[\"Equity\"] = (INITIAL_BALANCE *data[\"growth\"].cumprod()).round(2)\n",
+    "    data[\"Balance_with_R\"] = (INITIAL_BALANCE *data[\"growth\"].cumprod()).round(2)\n",
     "    \n",
-    "    # if grafic:\n",
-    "    #     graf = data[\"Balance\"].plot(kind=\"line\",xlabel=\"n Operaciones\",ylabel=\"Balance\")\n",
-    "    #     return graf\n",
     "    \n",
     "    return data[data.columns[-6:]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 270,
    "id": "687fc2de",
    "metadata": {},
    "outputs": [],
@@ -253,8 +257,7 @@
     "    peak = balance_n.cummax()\n",
     "    dd_in_R = balance_n - peak\n",
     "    return dd_in_R.min() \n",
-    "\n",
-    "max_risk = 10/abs(max_drawdown_in_R(df))\n"
+    "\n"
    ]
   },
   {
@@ -270,18 +273,39 @@
    "execution_count": null,
    "id": "733fb19d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.33000000000000007)"
+      ]
+     },
+     "execution_count": 289,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "normdf = df.drop(columns=[\"T / P\",\"Position\",\"Time Exit\",\"Type\"])\n",
+    "# print(df.Comment.unique())\n",
+    "normdf = df.drop(columns=[\"T / P\",\"Position\",\"Time Exit\",\"Type\",\"Balance\"])\n",
+    "\n",
     "add_R(normdf)\n",
     "\n",
-    "#Corrigo las operaciones para que todas arriesgen el 1% del balance actual\n",
-    "RISK = 0.015"
+    "xaum5 = df[df[\"Comment\"]==\"PORTFOLIO_1_2_3\"].copy()\n",
+    "\n",
+    "\n",
+    "add_R(xaum5)\n",
+    "profit_factor_v2(xaum5)\n",
+    "xaum5[\"Profit\"].mean()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 272,
    "id": "4624076c",
    "metadata": {},
    "outputs": [],
@@ -304,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 273,
    "id": "f225fd75",
    "metadata": {},
    "outputs": [],
