--- a/trading.ipynb
+++ b/trading.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 1,
    "id": "40f2ca0f",
    "metadata": {},
    "outputs": [],
@@ -16,20 +16,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 2,
    "id": "11ad56f1",
    "metadata": {},
    "outputs": [],
    "source": [
+    "df_xau = pd.read_csv(\"Files/backtest_formateado_XAU_M5.csv\")\n",
     "df = pd.read_excel(r\"Files/the5ers_bots.xlsx\",sheet_name=\"All\")\n",
-    "df = pd.read_excel(r\"Files/TTP_bots.xlsx\",sheet_name=\"All\")\n",
     "\n",
     "#Rellenando na con ceros \n",
     "df.fillna(0,inplace=True)\n",
     "\n",
     "\n",
     "#Colocando comment en operaciones manuales\n",
-    "df.loc[df[\"Comment\"]==np.nan,\"Comment\"] = \"Manual\"\n",
+    "df.loc[df[\"Comment\"]==0,\"Comment\"] = \"Manual\"\n",
     "\n",
     "#Resetando indice\n",
     "df.reset_index(inplace=True,drop=True)\n",
@@ -39,7 +39,8 @@
     "df.rename(columns={\"Time\":\"Time Entry\",\"Time.1\":\"Time Exit\"},inplace=True)\n",
     "\n",
     "#Nueva columna con el balance \n",
-    "df[\"Balance\"] = INITIAL_BALANCE + (df[\"Profit\"]+df[\"Commission\"]+df[\"Swap\"]).cumsum() \n"
+    "# df[\"Balance\"] = INITIAL_BALANCE + (df[\"Profit\"]+df[\"Commission\"]+df[\"Swap\"]).cumsum() \n",
+    "\n"
    ]
   },
   {
@@ -52,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 3,
    "id": "b5b6b6e7",
    "metadata": {},
    "outputs": [],
@@ -73,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 4,
    "id": "62084f7c",
    "metadata": {},
    "outputs": [],
@@ -101,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 5,
    "id": "682e5346",
    "metadata": {},
    "outputs": [],
@@ -162,61 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
-   "id": "4fc47ef8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def point_value(data_for_point_value:pd.DataFrame):\n",
-    "\n",
-    "    temp_df = data_for_point_value.copy()\n",
-    "    \n",
-    "    #*Calculo valor del punto =        |Profit|\n",
-    "    #*                          ----------------------------\n",
-    "    #*                             |P.Entry-P.Exit|*Volume \n",
-    "    \n",
-    "    temp_df[\"point_value\"] = temp_df[\"Profit\"].abs()/((temp_df[\"Price Entry\"]-temp_df[\"Price Exit\"]).abs()*temp_df[\"Volume\"])\n",
-    "    \n",
-    "    df_return = dict(temp_df.groupby(\"Symbol\")[\"point_value\"].median().round(2))\n",
-    "   \n",
-    "    return df_return"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 268,
-   "id": "a7150ce4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def add_R(data_R:pd.DataFrame):\n",
-    "    if \"R-multiple\" in data_R.columns:\n",
-    "        return None\n",
-    "    \n",
-    "    #Se sacan  las operaciones sin stops iniciales\n",
-    "    data_R.drop(data_R[data_R[\"S / L\"] ==0].index,inplace=True)\n",
-    "    data_R.reset_index(drop=True,inplace=True)\n",
-    "\n",
-    "    \n",
-    "    for i in point_value(data_R):\n",
-    "        \n",
-    "        #* Calculo R(usd): |P.Entry-SL|* Volumen* point_value\n",
-    "\n",
-    "        #Operaciones sin stop inicial deben ser tratadas con otro criterio \n",
-    "     \n",
-    "        func = abs(data_R[\"Price Entry\"] - data_R.loc[data_R[\"S / L\"]>0,\"S / L\"])*data_R[\"Volume\"]*point_value(data_R)[i]\n",
-    "        \n",
-    "        data_R.loc[data_R[\"Symbol\"]==i,\"R(usd)\"] = func.round(2)\n",
-    "    \n",
-    "    data_R[\"R-multiple\"] = (data_R[\"Profit\"]/data_R[\"R(usd)\"]).round(2)\n",
-    "\n",
-    "        \n",
-    "    return data_R "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 6,
    "id": "629bf708",
    "metadata": {},
    "outputs": [],
@@ -240,27 +187,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 270,
-   "id": "687fc2de",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def max_drawdown_in_R(data:pd.DataFrame):\n",
-    "    if \"R\" not in data.columns: \n",
-    "        add_R(data)\n",
-    "        print(\"Columna R añadida\")\n",
-    "    \n",
-    "    data[\"R\"]= data[\"R\"].fillna(0)\n",
-    "\n",
-    "    balance_n = data[\"R\"].cumsum() \n",
-    "    peak = balance_n.cummax()\n",
-    "    dd_in_R = balance_n - peak\n",
-    "    return dd_in_R.min() \n",
-    "\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "d1e83d11",
    "metadata": {},
@@ -271,69 +197,145 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "733fb19d",
+   "id": "f225fd75",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>Win</th>\n",
+       "      <th>Loss</th>\n",
+       "      <th>Total</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Comment</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Manual</th>\n",
+       "      <th>Percent</th>\n",
+       "      <td>0.0%</td>\n",
+       "      <td>100.0%</td>\n",
+       "      <td>100%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>n</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">NQ_WF_Strategy_4_10_26_1_1</th>\n",
+       "      <th>Percent</th>\n",
+       "      <td>100.0%</td>\n",
+       "      <td>0.0%</td>\n",
+       "      <td>100%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>n</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Porfolio 1.2.3 with SL</th>\n",
+       "      <th>Percent</th>\n",
+       "      <td>66.67%</td>\n",
+       "      <td>33.33%</td>\n",
+       "      <td>100%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>n</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">SP_Strategy_5_8_16</th>\n",
+       "      <th>Percent</th>\n",
+       "      <td>0.0%</td>\n",
+       "      <td>100.0%</td>\n",
+       "      <td>100%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>n</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">XAU_M5</th>\n",
+       "      <th>Percent</th>\n",
+       "      <td>66.67%</td>\n",
+       "      <td>33.33%</td>\n",
+       "      <td>100%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>n</th>\n",
+       "      <td>8</td>\n",
+       "      <td>4</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "np.float64(0.33000000000000007)"
+       "                                       Win    Loss Total\n",
+       "Comment                                                 \n",
+       "Manual                     Percent    0.0%  100.0%  100%\n",
+       "                           n             0       2     2\n",
+       "NQ_WF_Strategy_4_10_26_1_1 Percent  100.0%    0.0%  100%\n",
+       "                           n             1       0     1\n",
+       "Porfolio 1.2.3 with SL     Percent  66.67%  33.33%  100%\n",
+       "                           n             2       1     3\n",
+       "SP_Strategy_5_8_16         Percent    0.0%  100.0%  100%\n",
+       "                           n             0       2     2\n",
+       "XAU_M5                     Percent  66.67%  33.33%  100%\n",
+       "                           n             8       4    12"
       ]
      },
-     "execution_count": 289,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# print(df.Comment.unique())\n",
-    "normdf = df.drop(columns=[\"T / P\",\"Position\",\"Time Exit\",\"Type\",\"Balance\"])\n",
+    "from logic import BotAnalyzer \n",
     "\n",
-    "add_R(normdf)\n",
+    "fiveers = BotAnalyzer(df)\n",
+    "fiveers.add_R()\n",
     "\n",
-    "xaum5 = df[df[\"Comment\"]==\"PORTFOLIO_1_2_3\"].copy()\n",
+    "fiveers_df = fiveers.df\n",
     "\n",
+    "# fiveers_df.groupby(\"Comment\").apply(BotAnalyzer.expectancy_R,include_groups=False)\n",
     "\n",
-    "add_R(xaum5)\n",
-    "profit_factor_v2(xaum5)\n",
-    "xaum5[\"Profit\"].mean()\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 272,
-   "id": "4624076c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "profit = profit_factor_v2(df).to_frame(\"Profit Factor\") #type: ignore\n",
-    "\n",
-    "df_win = win_rate(df,by_bot=True)\n",
-    "\n",
-    "df_win_flat = df_win.unstack(level=-1)\n",
-    "df_win_flat.columns = [f\"{col[0]}_{col[1]}\" for col in df_win_flat.columns]\n",
-    "\n",
-    "\n",
-    "\n",
-    "df_final = pd.merge(profit, df_win_flat, left_index=True, right_index=True, how=\"outer\")\n",
-    "\n",
-    "# df_final[\"Profit\"] = df.groupby(\"Comment\")[\"Profit-Commi-Swap\"].sum()\n",
-    "# df_final.sort_values(by=\"Profit\",inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 273,
-   "id": "f225fd75",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from logic import BotAnalyzer "
+    "fiveers_df.groupby(\"Comment\").apply(BotAnalyzer.profit_factor,include_groups=False) #type:ignore\n",
+    "fiveers_df.groupby(\"Comment\").apply(BotAnalyzer.win_rate,include_groups=False) #type:ignore"
    ]
   }
  ],
