--- a/backtest_format.ipynb
+++ b/backtest_format.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 13,
    "id": "bd673684",
    "metadata": {},
    "outputs": [],
@@ -12,8 +12,9 @@
     "\n",
     "#! PARAMETROS A CAMBIAR\n",
     "\n",
-    "url= r\"C:\\Users\\maxiv\\Desktop\\Backtest\\XAU_M5_2025-01-01--2025-19-12.xlsx\"\n",
-    "BOT_COMMENT_NAME = \"XAU_M5\""
+    "url= r\"C:\\Users\\maxiv\\Desktop\\Backtest\\XAU_M5_2020-01-01--2025-23-12.xlsx\"\n",
+    "\n",
+    "BOT_COMMENT_NAME = input(\"Bot comment name: \")"
    ]
   },
   {
@@ -34,13 +35,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 14,
    "id": "4de7fee2",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Hoja de Ordenes\n",
-    "df_orders = pd.read_excel(url,sheet_name=\"orders\")"
+    "\n",
+    "df_orders = pd.read_excel(url,sheet_name='orders')\n"
    ]
   },
   {
@@ -59,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 15,
    "id": "720b29be",
    "metadata": {},
    "outputs": [],
@@ -83,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 16,
    "id": "3c136421",
    "metadata": {},
    "outputs": [],
@@ -94,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 17,
    "id": "9d770861",
    "metadata": {},
    "outputs": [],
@@ -129,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 18,
    "id": "1f9d15a4",
    "metadata": {},
    "outputs": [],
@@ -153,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 19,
    "id": "71eb4f8e",
    "metadata": {},
    "outputs": [],
@@ -168,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 20,
    "id": "b27ac23c",
    "metadata": {},
    "outputs": [],
@@ -192,12 +194,13 @@
    "metadata": {},
    "source": [
     "DataFrame de Deals_out\n",
+    "\n",
     "![image.png](attachment:image.png)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 21,
    "id": "5cc57afb",
    "metadata": {},
    "outputs": [],
@@ -235,288 +238,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "babfef66",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Time Entry</th>\n",
-       "      <th>Deal</th>\n",
-       "      <th>Symbol</th>\n",
-       "      <th>Type</th>\n",
-       "      <th>Volume</th>\n",
-       "      <th>Price Entry</th>\n",
-       "      <th>S / L</th>\n",
-       "      <th>T / P</th>\n",
-       "      <th>Time Exit</th>\n",
-       "      <th>Price Exit</th>\n",
-       "      <th>Commission</th>\n",
-       "      <th>Swap</th>\n",
-       "      <th>Profit</th>\n",
-       "      <th>Comment</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2025.01.23 20:10:20</td>\n",
-       "      <td>2</td>\n",
-       "      <td>XAUUSD</td>\n",
-       "      <td>buy</td>\n",
-       "      <td>0.11</td>\n",
-       "      <td>2756.60</td>\n",
-       "      <td>2748.05</td>\n",
-       "      <td>2773.77</td>\n",
-       "      <td>2025.01.24 04:46:20</td>\n",
-       "      <td>2773.77</td>\n",
-       "      <td>-0.27</td>\n",
-       "      <td>-10.01</td>\n",
-       "      <td>188.87</td>\n",
-       "      <td>XAU_M5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2025.01.24 17:24:40</td>\n",
-       "      <td>4</td>\n",
-       "      <td>XAUUSD</td>\n",
-       "      <td>buy</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>2784.62</td>\n",
-       "      <td>2767.59</td>\n",
-       "      <td>2813.17</td>\n",
-       "      <td>2025.01.24 23:00:00</td>\n",
-       "      <td>2770.97</td>\n",
-       "      <td>-0.12</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>-68.25</td>\n",
-       "      <td>XAU_M5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2025.01.30 08:58:40</td>\n",
-       "      <td>6</td>\n",
-       "      <td>XAUUSD</td>\n",
-       "      <td>buy</td>\n",
-       "      <td>0.15</td>\n",
-       "      <td>2766.25</td>\n",
-       "      <td>2759.85</td>\n",
-       "      <td>2777.15</td>\n",
-       "      <td>2025.01.30 12:16:40</td>\n",
-       "      <td>2777.15</td>\n",
-       "      <td>-0.37</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>163.50</td>\n",
-       "      <td>XAU_M5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2025.01.30 16:23:40</td>\n",
-       "      <td>8</td>\n",
-       "      <td>XAUUSD</td>\n",
-       "      <td>buy</td>\n",
-       "      <td>0.08</td>\n",
-       "      <td>2786.01</td>\n",
-       "      <td>2774.41</td>\n",
-       "      <td>2805.34</td>\n",
-       "      <td>2025.01.31 14:20:40</td>\n",
-       "      <td>2805.34</td>\n",
-       "      <td>-0.20</td>\n",
-       "      <td>-7.28</td>\n",
-       "      <td>154.64</td>\n",
-       "      <td>XAU_M5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2025.01.31 16:34:40</td>\n",
-       "      <td>10</td>\n",
-       "      <td>XAUUSD</td>\n",
-       "      <td>buy</td>\n",
-       "      <td>0.10</td>\n",
-       "      <td>2808.56</td>\n",
-       "      <td>2798.74</td>\n",
-       "      <td>2826.71</td>\n",
-       "      <td>2025.01.31 20:29:40</td>\n",
-       "      <td>2798.74</td>\n",
-       "      <td>-0.25</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>-98.20</td>\n",
-       "      <td>XAU_M5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>167</th>\n",
-       "      <td>2025.12.10 22:04:40</td>\n",
-       "      <td>336</td>\n",
-       "      <td>XAUUSD</td>\n",
-       "      <td>buy</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>4218.94</td>\n",
-       "      <td>4138.76</td>\n",
-       "      <td>4332.03</td>\n",
-       "      <td>2025.12.11 05:07:40</td>\n",
-       "      <td>4219.69</td>\n",
-       "      <td>-0.04</td>\n",
-       "      <td>-2.73</td>\n",
-       "      <td>0.75</td>\n",
-       "      <td>XAU_M5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>168</th>\n",
-       "      <td>2025.12.11 10:41:40</td>\n",
-       "      <td>338</td>\n",
-       "      <td>XAUUSD</td>\n",
-       "      <td>buy</td>\n",
-       "      <td>0.06</td>\n",
-       "      <td>4218.94</td>\n",
-       "      <td>4202.91</td>\n",
-       "      <td>4247.34</td>\n",
-       "      <td>2025.12.11 17:40:40</td>\n",
-       "      <td>4247.34</td>\n",
-       "      <td>-0.23</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>170.40</td>\n",
-       "      <td>XAU_M5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>169</th>\n",
-       "      <td>2025.12.12 16:51:40</td>\n",
-       "      <td>340</td>\n",
-       "      <td>XAUUSD</td>\n",
-       "      <td>buy</td>\n",
-       "      <td>0.02</td>\n",
-       "      <td>4346.16</td>\n",
-       "      <td>4307.08</td>\n",
-       "      <td>4405.88</td>\n",
-       "      <td>2025.12.12 17:25:40</td>\n",
-       "      <td>4307.08</td>\n",
-       "      <td>-0.08</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>-78.16</td>\n",
-       "      <td>XAU_M5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>170</th>\n",
-       "      <td>2025.12.15 08:45:40</td>\n",
-       "      <td>342</td>\n",
-       "      <td>XAUUSD</td>\n",
-       "      <td>buy</td>\n",
-       "      <td>0.06</td>\n",
-       "      <td>4346.16</td>\n",
-       "      <td>4331.74</td>\n",
-       "      <td>4373.63</td>\n",
-       "      <td>2025.12.15 15:59:40</td>\n",
-       "      <td>4331.74</td>\n",
-       "      <td>-0.23</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>-86.52</td>\n",
-       "      <td>XAU_M5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>171</th>\n",
-       "      <td>2025.12.16 16:05:40</td>\n",
-       "      <td>344</td>\n",
-       "      <td>XAUUSD</td>\n",
-       "      <td>buy</td>\n",
-       "      <td>0.02</td>\n",
-       "      <td>4318.05</td>\n",
-       "      <td>4282.09</td>\n",
-       "      <td>4372.00</td>\n",
-       "      <td>2025.12.16 23:49:59</td>\n",
-       "      <td>4303.80</td>\n",
-       "      <td>-0.08</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>-28.50</td>\n",
-       "      <td>XAU_M5</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>172 rows × 14 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "              Time Entry  Deal  Symbol Type  Volume  Price Entry    S / L  \\\n",
-       "0    2025.01.23 20:10:20     2  XAUUSD  buy    0.11      2756.60  2748.05   \n",
-       "1    2025.01.24 17:24:40     4  XAUUSD  buy    0.05      2784.62  2767.59   \n",
-       "2    2025.01.30 08:58:40     6  XAUUSD  buy    0.15      2766.25  2759.85   \n",
-       "3    2025.01.30 16:23:40     8  XAUUSD  buy    0.08      2786.01  2774.41   \n",
-       "4    2025.01.31 16:34:40    10  XAUUSD  buy    0.10      2808.56  2798.74   \n",
-       "..                   ...   ...     ...  ...     ...          ...      ...   \n",
-       "167  2025.12.10 22:04:40   336  XAUUSD  buy    0.01      4218.94  4138.76   \n",
-       "168  2025.12.11 10:41:40   338  XAUUSD  buy    0.06      4218.94  4202.91   \n",
-       "169  2025.12.12 16:51:40   340  XAUUSD  buy    0.02      4346.16  4307.08   \n",
-       "170  2025.12.15 08:45:40   342  XAUUSD  buy    0.06      4346.16  4331.74   \n",
-       "171  2025.12.16 16:05:40   344  XAUUSD  buy    0.02      4318.05  4282.09   \n",
-       "\n",
-       "       T / P            Time Exit  Price Exit  Commission   Swap  Profit  \\\n",
-       "0    2773.77  2025.01.24 04:46:20     2773.77       -0.27 -10.01  188.87   \n",
-       "1    2813.17  2025.01.24 23:00:00     2770.97       -0.12   0.00  -68.25   \n",
-       "2    2777.15  2025.01.30 12:16:40     2777.15       -0.37   0.00  163.50   \n",
-       "3    2805.34  2025.01.31 14:20:40     2805.34       -0.20  -7.28  154.64   \n",
-       "4    2826.71  2025.01.31 20:29:40     2798.74       -0.25   0.00  -98.20   \n",
-       "..       ...                  ...         ...         ...    ...     ...   \n",
-       "167  4332.03  2025.12.11 05:07:40     4219.69       -0.04  -2.73    0.75   \n",
-       "168  4247.34  2025.12.11 17:40:40     4247.34       -0.23   0.00  170.40   \n",
-       "169  4405.88  2025.12.12 17:25:40     4307.08       -0.08   0.00  -78.16   \n",
-       "170  4373.63  2025.12.15 15:59:40     4331.74       -0.23   0.00  -86.52   \n",
-       "171  4372.00  2025.12.16 23:49:59     4303.80       -0.08   0.00  -28.50   \n",
-       "\n",
-       "    Comment  \n",
-       "0    XAU_M5  \n",
-       "1    XAU_M5  \n",
-       "2    XAU_M5  \n",
-       "3    XAU_M5  \n",
-       "4    XAU_M5  \n",
-       "..      ...  \n",
-       "167  XAU_M5  \n",
-       "168  XAU_M5  \n",
-       "169  XAU_M5  \n",
-       "170  XAU_M5  \n",
-       "171  XAU_M5  \n",
-       "\n",
-       "[172 rows x 14 columns]"
-      ]
-     },
-     "execution_count": 98,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "columns_to_add_from_deals_in = [\"Time\",\"Deal\",\"Symbol\",\"Type\",\"Volume\",\"Price\"]\n",
     "columns_to_add_from_orders = [\"S / L\",\"T / P\"]\n",
@@ -564,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 24,
    "id": "e206b7df",
    "metadata": {},
    "outputs": [],
