--- a/trading.ipynb
+++ b/trading.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 67,
    "id": "40f2ca0f",
    "metadata": {},
    "outputs": [],
@@ -16,12 +16,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 68,
    "id": "11ad56f1",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_xau = pd.read_csv(\"Files/backtest_formateado_XAU_M5.csv\")\n",
+    "df_xau_2020 = pd.read_csv(\"Files/backtest_formateado_XAU_M5_2020-2025.csv\",\n",
+    "                            parse_dates=[\"Time Entry\",\"Time Exit\"],\n",
+    "                            date_format=\"%Y.%m.%d %H:%M:%S\")\n",
+    "\n",
     "df = pd.read_excel(r\"Files/the5ers_bots.xlsx\",sheet_name=\"All\")\n",
     "\n",
     "#Rellenando na con ceros \n",
@@ -53,117 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "b5b6b6e7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_bots_by_comment():\n",
-    "    return df[\"Comment\"].unique()\n",
-    "\n",
-    "def handle_errors_not_string_and_not_in_df(x):\n",
-    "     #Verificicar que sea none para no entrar en el if y que sea una string \n",
-    "    if x is not None:\n",
-    "        if  not isinstance(x,str) :\n",
-    "            raise TypeError(f\"{x} no es una string\")\n",
-    "    \n",
-    "        #Conseguir los bots por comentario del df y verificar si bot se encuentra\n",
-    "        if x not in get_bots_by_comment():\n",
-    "            raise KeyError(f\"{x} no está en el dataframe\")    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "62084f7c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def profit_factor_v2(data,by_bot=True):\n",
-    "    \n",
-    "    #Profit factor por bot\n",
-    "    if by_bot:\n",
-    "        x = data.groupby(\"Comment\")        \n",
-    "\n",
-    "        return x.apply(profit_factor_v2,by_bot=False,include_groups=False) #type: ignore\n",
-    "\n",
-    "\n",
-    "    total_profit = data[data[\"Profit\"]>=0][\"Profit\"].sum()\n",
-    "    total_loss = data[data[\"Profit\"]< 0][\"Profit\"].sum()\n",
-    "\n",
-    "    #Division por 0\n",
-    "    if total_loss==0:\n",
-    "        return float('inf')\n",
-    "    \n",
-    "\n",
-    "    return round(abs(total_profit/total_loss),2)\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "682e5346",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def win_rate(data:pd.DataFrame,by_bot = False,BE = True):\n",
-    "    \"\"\"\n",
-    "    Calcula los ratios para los bots o para el total de la cuenta\n",
-    "    Se puede desactivar el calculo con BE y hacerlo normal\n",
-    "\n",
-    "    Nota: Se considera BE cuando el profit fue menor que el 0.15% del balance actual\n",
-    "    \"\"\"\n",
-    "\n",
-    "    #data es un dataframe?\n",
-    "    if not isinstance(data,pd.DataFrame):\n",
-    "        raise TypeError(\"data is not a Dataframe\")\n",
-    "    \n",
-    "    #Profit y balance son columnas necesarias para el calculo, están?\n",
-    "    if \"Profit\" not in data.columns or \"Balance\" not in data.columns:\n",
-    "        raise KeyError(\"Columns 'Profit' or 'Balance' is not in your dataframe\")\n",
-    "\n",
-    "  \n",
-    "\n",
-    "    #Calculo\n",
-    "    total = data[\"Profit\"].count()\n",
-    "\n",
-    "    percent = lambda x: round(x*100/total,2)  \n",
-    "\n",
-    "    win = ((data[\"Profit\"] > 0) & (data[\"Profit\"] > data[\"Balance\"]*0.0015)).sum() \n",
-    "    win_percent = percent(win)\n",
-    "\n",
-    "    losses = (data[\"Profit\"] < 0 ).sum()\n",
-    "    losses_percent = percent(losses)\n",
-    "    \n",
-    "    #Diccionario base\n",
-    "    dicc =  {\"Win\":[f\"{win_percent}%\",win],\n",
-    "            \"Loss\":[f\"{losses_percent}%\",losses]}\n",
-    "\n",
-    "    #Queres los breakeven?\n",
-    "    if BE:\n",
-    "        breakeven =  ((data[\"Profit\"] < data[\"Balance\"]*0.0015) & (data[\"Profit\"] > 0)).sum()\n",
-    "        breakeven_percent = percent(breakeven)\n",
-    "\n",
-    "        dicc[\"BE\"] = [f\"{breakeven_percent}%\",breakeven]\n",
-    "    \n",
-    "    #Añado el total\n",
-    "    \n",
-    "    dicc[\"Total\"] = [\"100%\", total]\n",
-    "\n",
-    "\n",
-    "    #Para cada bot\n",
-    "    if by_bot:\n",
-    "        x = data.groupby(\"Comment\")[[\"Profit\",\"Balance\"]]\n",
-    "        return x.apply(win_rate,BE=BE)\n",
-    "    \n",
-    "\n",
-    "    return pd.DataFrame(dicc,index=[\"Percent\",\"n\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 69,
    "id": "629bf708",
    "metadata": {},
    "outputs": [],
@@ -196,147 +90,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "id": "f225fd75",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from logic import BotAnalyzer as bt\n",
+    "import plotly.express as px\n",
+    "import plotly.io as pio\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "42d2ab83",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>Win</th>\n",
-       "      <th>Loss</th>\n",
-       "      <th>Total</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Comment</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">Manual</th>\n",
-       "      <th>Percent</th>\n",
-       "      <td>0.0%</td>\n",
-       "      <td>100.0%</td>\n",
-       "      <td>100%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>n</th>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">NQ_WF_Strategy_4_10_26_1_1</th>\n",
-       "      <th>Percent</th>\n",
-       "      <td>100.0%</td>\n",
-       "      <td>0.0%</td>\n",
-       "      <td>100%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>n</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">Porfolio 1.2.3 with SL</th>\n",
-       "      <th>Percent</th>\n",
-       "      <td>66.67%</td>\n",
-       "      <td>33.33%</td>\n",
-       "      <td>100%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>n</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">SP_Strategy_5_8_16</th>\n",
-       "      <th>Percent</th>\n",
-       "      <td>0.0%</td>\n",
-       "      <td>100.0%</td>\n",
-       "      <td>100%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>n</th>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">XAU_M5</th>\n",
-       "      <th>Percent</th>\n",
-       "      <td>66.67%</td>\n",
-       "      <td>33.33%</td>\n",
-       "      <td>100%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>n</th>\n",
-       "      <td>8</td>\n",
-       "      <td>4</td>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                                       Win    Loss Total\n",
-       "Comment                                                 \n",
-       "Manual                     Percent    0.0%  100.0%  100%\n",
-       "                           n             0       2     2\n",
-       "NQ_WF_Strategy_4_10_26_1_1 Percent  100.0%    0.0%  100%\n",
-       "                           n             1       0     1\n",
-       "Porfolio 1.2.3 with SL     Percent  66.67%  33.33%  100%\n",
-       "                           n             2       1     3\n",
-       "SP_Strategy_5_8_16         Percent    0.0%  100.0%  100%\n",
-       "                           n             0       2     2\n",
-       "XAU_M5                     Percent  66.67%  33.33%  100%\n",
-       "                           n             8       4    12"
+       "(566, 16)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from logic import BotAnalyzer \n",
-    "\n",
-    "fiveers = BotAnalyzer(df)\n",
+    "fiveers = bt(df)\n",
     "fiveers.add_R()\n",
     "\n",
-    "fiveers_df = fiveers.df\n",
+    "xau = bt(df_xau_2020)\n",
+    "xau.add_R()\n",
     "\n",
-    "# fiveers_df.groupby(\"Comment\").apply(BotAnalyzer.expectancy_R,include_groups=False)\n",
+    "xau.summary\n",
     "\n",
-    "fiveers_df.groupby(\"Comment\").apply(BotAnalyzer.profit_factor,include_groups=False) #type:ignore\n",
-    "fiveers_df.groupby(\"Comment\").apply(BotAnalyzer.win_rate,include_groups=False) #type:ignore"
+    "xau.df.shape"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "d889d84d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xau.trim_per_extreme_values(0.01)\n",
+    "\n",
+    "xau.df[\"R_equity\"] = bt.equity_R_curve(xau.df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "3473abbb",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Plotly Express cannot process wide-form data with columns of different type.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[73]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      1\u001b[39m mon = xau.df.groupby(xau.df[\u001b[33m\"\u001b[39m\u001b[33mTime Entry\u001b[39m\u001b[33m\"\u001b[39m].dt.to_period(\u001b[33m\"\u001b[39m\u001b[33mM\u001b[39m\u001b[33m\"\u001b[39m))[\u001b[33m\"\u001b[39m\u001b[33mR_equity\u001b[39m\u001b[33m\"\u001b[39m]\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m fig  = \u001b[43mpx\u001b[49m\u001b[43m.\u001b[49m\u001b[43mline\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmon\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\maxiv\\Downloads\\Informatica\\Visual Studio\\Trading\\.venv\\Lib\\site-packages\\plotly\\express\\_chart_types.py:270\u001b[39m, in \u001b[36mline\u001b[39m\u001b[34m(data_frame, x, y, line_group, color, line_dash, symbol, hover_name, hover_data, custom_data, text, facet_row, facet_col, facet_col_wrap, facet_row_spacing, facet_col_spacing, error_x, error_x_minus, error_y, error_y_minus, animation_frame, animation_group, category_orders, labels, orientation, color_discrete_sequence, color_discrete_map, line_dash_sequence, line_dash_map, symbol_sequence, symbol_map, markers, log_x, log_y, range_x, range_y, line_shape, render_mode, title, subtitle, template, width, height)\u001b[39m\n\u001b[32m    221\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mline\u001b[39m(\n\u001b[32m    222\u001b[39m     data_frame=\u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[32m    223\u001b[39m     x=\u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[32m   (...)\u001b[39m\u001b[32m    264\u001b[39m     height=\u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[32m    265\u001b[39m ) -> go.Figure:\n\u001b[32m    266\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m    267\u001b[39m \u001b[33;03m    In a 2D line plot, each row of `data_frame` is represented as a vertex of\u001b[39;00m\n\u001b[32m    268\u001b[39m \u001b[33;03m    a polyline mark in 2D space.\u001b[39;00m\n\u001b[32m    269\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m270\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mmake_figure\u001b[49m\u001b[43m(\u001b[49m\u001b[43margs\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mlocals\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mconstructor\u001b[49m\u001b[43m=\u001b[49m\u001b[43mgo\u001b[49m\u001b[43m.\u001b[49m\u001b[43mScatter\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\maxiv\\Downloads\\Informatica\\Visual Studio\\Trading\\.venv\\Lib\\site-packages\\plotly\\express\\_core.py:2491\u001b[39m, in \u001b[36mmake_figure\u001b[39m\u001b[34m(args, constructor, trace_patch, layout_patch)\u001b[39m\n\u001b[32m   2488\u001b[39m layout_patch = layout_patch \u001b[38;5;129;01mor\u001b[39;00m {}\n\u001b[32m   2489\u001b[39m apply_default_cascade(args)\n\u001b[32m-> \u001b[39m\u001b[32m2491\u001b[39m args = \u001b[43mbuild_dataframe\u001b[49m\u001b[43m(\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mconstructor\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   2492\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m constructor \u001b[38;5;129;01min\u001b[39;00m [go.Treemap, go.Sunburst, go.Icicle] \u001b[38;5;129;01mand\u001b[39;00m args[\u001b[33m\"\u001b[39m\u001b[33mpath\u001b[39m\u001b[33m\"\u001b[39m] \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m   2493\u001b[39m     args = process_dataframe_hierarchy(args)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\maxiv\\Downloads\\Informatica\\Visual Studio\\Trading\\.venv\\Lib\\site-packages\\plotly\\express\\_core.py:1789\u001b[39m, in \u001b[36mbuild_dataframe\u001b[39m\u001b[34m(args, constructor)\u001b[39m\n\u001b[32m   1787\u001b[39m         dtype = v_dtype\n\u001b[32m   1788\u001b[39m     \u001b[38;5;28;01melif\u001b[39;00m dtype != v_dtype:\n\u001b[32m-> \u001b[39m\u001b[32m1789\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[32m   1790\u001b[39m             \u001b[33m\"\u001b[39m\u001b[33mPlotly Express cannot process wide-form data with columns of different type.\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m   1791\u001b[39m         )\n\u001b[32m   1792\u001b[39m df_output = df_output.unpivot(\n\u001b[32m   1793\u001b[39m     index=wide_id_vars,\n\u001b[32m   1794\u001b[39m     on=wide_value_vars,\n\u001b[32m   1795\u001b[39m     variable_name=var_name,\n\u001b[32m   1796\u001b[39m     value_name=value_name,\n\u001b[32m   1797\u001b[39m )\n\u001b[32m   1798\u001b[39m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(df_output.columns) == \u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mset\u001b[39m(df_output.columns)), (\n\u001b[32m   1799\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mWide-mode name-inference failure, likely due to a internal bug. \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m   1800\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mPlease report this to \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m   1801\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mhttps://github.com/plotly/plotly.py/issues/new and we will try to \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m   1802\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mreplicate and fix it.\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m   1803\u001b[39m )\n",
+      "\u001b[31mValueError\u001b[39m: Plotly Express cannot process wide-form data with columns of different type."
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "mon = xau.df.groupby(xau.df[\"Time Entry\"].dt.to_period(\"M\"))[\"R_equity\"]\n",
+    "\n",
+    "\n",
+    "fig  = px.line(mon)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25c3b18b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
