--- a/trading.ipynb
+++ b/trading.ipynb
@@ -2,31 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 9,
    "id": "40f2ca0f",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "from typing import Optional \n",
     "import numpy as np\n",
+    "import plotly.express as px\n",
+    "import accessors\n",
+    "\n",
     "INITIAL_BALANCE = 5000"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "id": "11ad56f1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_xau = pd.read_csv(\"Files/backtest_formateado_XAU_M5.csv\")\n",
+    "# df_xau = pd.read_csv(\"Files/backtest_formateado_XAU_M5.csv\")\n",
     "df_xau_2020 = pd.read_csv(\"Files/backtest_formateado_XAU_M5_2020-2025.csv\",\n",
     "                            parse_dates=[\"Time Entry\",\"Time Exit\"],\n",
     "                            date_format=\"%Y.%m.%d %H:%M:%S\")\n",
     "\n",
-    "df = pd.read_excel(r\"Files/the5ers_bots.xlsx\",sheet_name=\"All\")\n",
+    "\n",
+    "df = pd.read_excel(\"Files/the5ers_bots.xlsx\",sheet_name=\"All\")\n",
+    "\n",
     "\n",
     "#Rellenando na con ceros \n",
     "df.fillna(0,inplace=True)\n",
@@ -49,39 +53,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd4f64c9",
-   "metadata": {},
-   "source": [
-    "# Funciones"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "id": "629bf708",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def balance_in_R(data:pd.DataFrame,RISK:float = 0.01):\n",
-    "    \n",
-    "    # * Formula: Balance_n = Balance_0 * PRODUCTORIO(1 + R_n* RISK) \n",
-    "    \n",
-    "    #Limpio \"R(usd)\" que no me interesa\n",
-    "    if \"R(usd)\" in data.columns:\n",
-    "        data = data.drop(columns=\"R(usd)\")\n",
-    "\n",
-    "    #Interior del Productorio\n",
-    "    data[\"growth\"] = 1+ data[\"R-multiple\"]*RISK\n",
-    "    \n",
-    "    #Toda la Formula\n",
-    "    data[\"Balance_with_R\"] = (INITIAL_BALANCE *data[\"growth\"].cumprod()).round(2)\n",
-    "    \n",
-    "    \n",
-    "    return data[data.columns[-6:]]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "d1e83d11",
    "metadata": {},
    "source": [
@@ -90,93 +61,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "id": "f225fd75",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from logic import BotAnalyzer as bt\n",
-    "import plotly.express as px\n",
-    "import plotly.io as pio\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "id": "42d2ab83",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(566, 16)"
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "fiveers = bt(df)\n",
-    "fiveers.add_R()\n",
-    "\n",
-    "xau = bt(df_xau_2020)\n",
-    "xau.add_R()\n",
-    "\n",
-    "xau.summary\n",
-    "\n",
-    "xau.df.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
-   "id": "d889d84d",
-   "metadata": {},
    "outputs": [],
    "source": [
-    "xau.trim_per_extreme_values(0.01)\n",
+    "#Format a las columnas de tiempo\n",
+    "df[[\"Time Entry\",\"Time Exit\"]] = df[[\"Time Entry\",\"Time Exit\"]].map(pd.to_datetime)\n",
     "\n",
-    "xau.df[\"R_equity\"] = bt.equity_R_curve(xau.df)\n"
+    "#Borrar columna de notas\n",
+    "df.drop(columns=\"NOTAS\",inplace=True,errors='ignore')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
-   "id": "3473abbb",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "Plotly Express cannot process wide-form data with columns of different type.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[73]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      1\u001b[39m mon = xau.df.groupby(xau.df[\u001b[33m\"\u001b[39m\u001b[33mTime Entry\u001b[39m\u001b[33m\"\u001b[39m].dt.to_period(\u001b[33m\"\u001b[39m\u001b[33mM\u001b[39m\u001b[33m\"\u001b[39m))[\u001b[33m\"\u001b[39m\u001b[33mR_equity\u001b[39m\u001b[33m\"\u001b[39m]\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m fig  = \u001b[43mpx\u001b[49m\u001b[43m.\u001b[49m\u001b[43mline\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmon\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\maxiv\\Downloads\\Informatica\\Visual Studio\\Trading\\.venv\\Lib\\site-packages\\plotly\\express\\_chart_types.py:270\u001b[39m, in \u001b[36mline\u001b[39m\u001b[34m(data_frame, x, y, line_group, color, line_dash, symbol, hover_name, hover_data, custom_data, text, facet_row, facet_col, facet_col_wrap, facet_row_spacing, facet_col_spacing, error_x, error_x_minus, error_y, error_y_minus, animation_frame, animation_group, category_orders, labels, orientation, color_discrete_sequence, color_discrete_map, line_dash_sequence, line_dash_map, symbol_sequence, symbol_map, markers, log_x, log_y, range_x, range_y, line_shape, render_mode, title, subtitle, template, width, height)\u001b[39m\n\u001b[32m    221\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mline\u001b[39m(\n\u001b[32m    222\u001b[39m     data_frame=\u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[32m    223\u001b[39m     x=\u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[32m   (...)\u001b[39m\u001b[32m    264\u001b[39m     height=\u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[32m    265\u001b[39m ) -> go.Figure:\n\u001b[32m    266\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m    267\u001b[39m \u001b[33;03m    In a 2D line plot, each row of `data_frame` is represented as a vertex of\u001b[39;00m\n\u001b[32m    268\u001b[39m \u001b[33;03m    a polyline mark in 2D space.\u001b[39;00m\n\u001b[32m    269\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m270\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mmake_figure\u001b[49m\u001b[43m(\u001b[49m\u001b[43margs\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mlocals\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mconstructor\u001b[49m\u001b[43m=\u001b[49m\u001b[43mgo\u001b[49m\u001b[43m.\u001b[49m\u001b[43mScatter\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\maxiv\\Downloads\\Informatica\\Visual Studio\\Trading\\.venv\\Lib\\site-packages\\plotly\\express\\_core.py:2491\u001b[39m, in \u001b[36mmake_figure\u001b[39m\u001b[34m(args, constructor, trace_patch, layout_patch)\u001b[39m\n\u001b[32m   2488\u001b[39m layout_patch = layout_patch \u001b[38;5;129;01mor\u001b[39;00m {}\n\u001b[32m   2489\u001b[39m apply_default_cascade(args)\n\u001b[32m-> \u001b[39m\u001b[32m2491\u001b[39m args = \u001b[43mbuild_dataframe\u001b[49m\u001b[43m(\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mconstructor\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   2492\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m constructor \u001b[38;5;129;01min\u001b[39;00m [go.Treemap, go.Sunburst, go.Icicle] \u001b[38;5;129;01mand\u001b[39;00m args[\u001b[33m\"\u001b[39m\u001b[33mpath\u001b[39m\u001b[33m\"\u001b[39m] \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m   2493\u001b[39m     args = process_dataframe_hierarchy(args)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\maxiv\\Downloads\\Informatica\\Visual Studio\\Trading\\.venv\\Lib\\site-packages\\plotly\\express\\_core.py:1789\u001b[39m, in \u001b[36mbuild_dataframe\u001b[39m\u001b[34m(args, constructor)\u001b[39m\n\u001b[32m   1787\u001b[39m         dtype = v_dtype\n\u001b[32m   1788\u001b[39m     \u001b[38;5;28;01melif\u001b[39;00m dtype != v_dtype:\n\u001b[32m-> \u001b[39m\u001b[32m1789\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[32m   1790\u001b[39m             \u001b[33m\"\u001b[39m\u001b[33mPlotly Express cannot process wide-form data with columns of different type.\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m   1791\u001b[39m         )\n\u001b[32m   1792\u001b[39m df_output = df_output.unpivot(\n\u001b[32m   1793\u001b[39m     index=wide_id_vars,\n\u001b[32m   1794\u001b[39m     on=wide_value_vars,\n\u001b[32m   1795\u001b[39m     variable_name=var_name,\n\u001b[32m   1796\u001b[39m     value_name=value_name,\n\u001b[32m   1797\u001b[39m )\n\u001b[32m   1798\u001b[39m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(df_output.columns) == \u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mset\u001b[39m(df_output.columns)), (\n\u001b[32m   1799\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mWide-mode name-inference failure, likely due to a internal bug. \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m   1800\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mPlease report this to \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m   1801\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mhttps://github.com/plotly/plotly.py/issues/new and we will try to \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m   1802\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mreplicate and fix it.\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m   1803\u001b[39m )\n",
-      "\u001b[31mValueError\u001b[39m: Plotly Express cannot process wide-form data with columns of different type."
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "mon = xau.df.groupby(xau.df[\"Time Entry\"].dt.to_period(\"M\"))[\"R_equity\"]\n",
-    "\n",
-    "\n",
-    "fig  = px.line(mon)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "25c3b18b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
